# Weather_Sensors_and_Smartplugs_with_MQTT

./: .dockerignore  .env.home-lab  .env.template  .env.vultr-vm  .gitignore  000 README.md  0README.md  DOCKER_DEPLOYMENT.md  Dockerfile  PORTAINER_STACKS.md  QUICK_REFERENCE.md  README.md  ToDo_Republish.md  build-and-push.sh  change_device_id.sh  datadevice_data.json  device_attributes.csv  docker-compose.yml  echo_broker.py  entrypoint.sh  generate-portainer-stacks.sh  get_config_files.sh  group_by_proto_id.py  hello.py  local_sensors_update_2.json  local_sensors_update_3.json  node-red-flows 20250311.json  portainer-stack-pi2.yml  portainer-stack-rosa.yml  portainer-stack-twix.yml  portainer-stack-vultr2.yml  portainer-stack-vultr3.yml  portainer-stack.template.yml  portainer-stack.yml  process_mqtt_message.py  publish_local_sensors.sh  pyproject.toml  republish_processed_sensors_main.py  requirements.txt  requirements.txt.new  (+8 more)
.claude/: settings.json
Problem Statements/: problem_20260402T1118.md  problem_20260402T1230.md  problem_shelly_20260402T1252.md
Reports and Dashboards/: shelly_analysis_20260402.md  shelly_dashboard_20260402.html  weather_sensor_analysis_20260402.md
config/: broker_config.py  brokers.json  device_ids.json  local_sensors.backup.20251110T1018.json  local_sensors.json  local_sensors.json.backup.20251110_102028  local_sensors.json.backup.20251124_160537  local_sensors.json.backup.20251201_130342  logging_config.py  mqtt_config.py  protocol_categories.json  rtl_433_protocols.json  rtl_433_protocols_orig.json  tracked_protocols.json
config_update/: add_234_167.json  local_sensors_update.json  local_sensors_update_3.json  local_sensors_update_standard.json
docker-python-app/: Dockerfile
docker-python-app-1/: README.md
myenv/: pyvenv.cfg
node-red_json/: flows-20250507.json  flows.json
src/: echo_broker.py  group_by_proto_id.py  shelly_main.py  (+1 more)
(+47 files in other folders)
