[project]
name = "weather-sensors"
version = "0.1.0"
description = "Weather sensors and smartplugs - read mqtt messages from the broker and republish as a collection of json for each device"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "paho-mqtt>=2.1.0",
    "python-dotenv>=1.0.1",
]
