[project]
name = "weather-sensors"
version = "0.1.0"
description = "Weather sensors and smartplugs - read mqtt messages from the broker and republish as a collection of json for each device"
readme = "README.md"
requires-python = ">=3.12.2"
authors = [
    {name = "Karl Braun", email = "karl@ktb.dev"}
]
keywords = ["mqtt", "sensors", "weather", "iot", "shelly", "rtl433"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "paho-mqtt>=2.1.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
republish-sensors = "republish_processed_sensors_main:main"
shelly-processor = "shelly_main:main"
sensor-utils = "src.utils.flatten_json:main"

[project.urls]
Homepage = "https://github.com/karltbraun/Weather_Sensors_and_Smartplugs_with_MQTT"
Repository = "https://github.com/karltbraun/Weather_Sensors_and_Smartplugs_with_MQTT"
Issues = "https://github.com/karltbraun/Weather_Sensors_and_Smartplugs_with_MQTT/issues"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
